--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
   <meta name="Arnau Nin Pérez" content="@arnaunin">
 
   <!--Descripción de la página para los buscadores-->
-  <meta name="description" content="Pagina web oficial del restaurant La Barca de Ca l'Ardet">
+  <meta name="description" content="Página web oficial del restaurant La Barca de Ca l'Ardet">
 
   <!--Palabras clave para los buscadores-->
   <meta name="keywords" content="p, h1, h2, h3, h4, h5">
@@ -31,7 +31,7 @@
   <header>
     <!--Logo del restaurante-->
     <figure>
-      <img src="img/logo.jpg" alt="Logotip La Barca">
+      <img src="img/logos/logo.jpg" alt="Logotip La Barca">
     </figure>
 
     <!--Nombre del restaurante-->
@@ -54,6 +54,7 @@
 
     <!--Botón de Reserva Rápida-->
     <a href="reservas.html">Reserva Rápida</a>
+    <hr>
   </header>
 
   <main>
@@ -132,6 +133,7 @@
         Galería con fotos del interior y del exterior del restaurante
       </p>
     </section>
+    <hr>
   </main>
 
   <footer>
@@ -142,7 +144,7 @@
       <p><strong>Teléfono:</strong> +34 977 691 559</p>
       <p><strong>Reservas Whatsapp:</strong>877 055 187</p>
       <p><strong>Correo:</strong> <a href="mailto:info@labarcadecalardet.com">info@labarcadecalardet.com</a></p>
-      <p><strong>Horario de Apertura:</strong> Miercoles a Domingo: 13:30 - 18:00</p>
+      <p><strong>Horario de Apertura:</strong> Miércoles a Domingo: 13:30 - 18:00</p>
     </section>
 
     <!--Mapa-->
