--- a/code/avisos_legales.html
+++ b/code/avisos_legales.html
@@ -31,7 +31,7 @@
   <header>
     <!--Logo del restaurante-->
     <figure>
-      <img src="img/logo.jpg" alt="Logotip La Barca">
+      <img src="img/logos/logo.jpg" alt="Logotip La Barca">
     </figure>
 
     <!--Nombre del restaurante-->
@@ -170,11 +170,36 @@
         utilizamos y protegemos los datos personales del usuario.
         </p>
     </section>
-    
+    <hr>
   </main>
 
   <footer>
-    La Barca de Ca l’Ardet © 2024 | Diseño y programación Arnau Nin Pérez
+    <!--información de contacto-->
+    <section>
+      <h3>Contacto</h3>
+      <p><strong>Dirección:</strong> C/Marinada 1 – Urb. Mas Mel – 43820 Calafell (Tarragona)</p>
+      <p><strong>Teléfono:</strong> +34 977 691 559</p>
+      <p><strong>Reservas Whatsapp:</strong>877 055 187</p>
+      <p><strong>Correo:</strong> <a href="mailto:info@labarcadecalardet.com">info@labarcadecalardet.com</a></p>
+      <p><strong>Horario de Apertura:</strong> Miercoles a Domingo: 13:30 - 18:00</p>
+    </section>
+
+    <!--Mapa-->
+    <section>
+      <section>
+        <h3>Encuentranos aquí</h3>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.60615272547!2d1.589268200000005!3d41.19259260000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a38bf9da7b16e9%3A0xc89b64e797e7534!2sRestaurant%20La%20Barca%20de%20Ca%20l&#39;Ardet!5e1!3m2!1sca!2ses!4v1730113429128!5m2!1sca!2ses"
+        width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
+    <!--Redes sociales-->
+    <section>
+      <h3>Síguenos</h3>
+      <a href="https://www.instagram.com/labarcadecalardet/"><img src="img/footer/Instagram_logo.png" alt="Instagram" width="75px"></a>
+      <a href="https://www.facebook.com/p/La-Barca-De-Ca-Lardet-100063830162435/"><img src="img/footer/Facebook_logo.png" alt="Facebook" width="75px"></a>
+    </section>
+
+    <p>La Barca de Ca l’Ardet © 2024 | Diseño y programación Arnau Nin Pérez</p>
   </footer>
 </body>
 
