--- a/code/menu_la_barca.html
+++ b/code/menu_la_barca.html
@@ -45,7 +45,7 @@
       <ul>
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
-        <li>MENÚ/CARTA</li>
+        <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
@@ -55,43 +55,42 @@
   </header>
 
   <main>
-    <!--Sección que introduce a la carta-->
+    <figure>
+      <img src="img/logos/logo_pastel.png" alt="La Barca" width="15%">
+    </figure>
+    <!--Sección menú La Barca-->
     <section>
-        <h2>Nuestra mejor selección</h2>
-        <p>
-        A continuación le mostramos nuestra carta. Creatividad y tradición, fusionadas en perfecta armonía. 10 % Iva no incluído
-        </p>
+      <h2>Menú La Barca - L'Arrossejat de Calafell</h2>
+      <h3>45,95€</h3>
+      <p>Arrossejat pescador:</p>
+      <ul type="None">
+        <li>La cazuela de rape con patatas y allioli</li>
+        <li>Y el arroz o los fideos "rossejats" a banda</li>
+      </ul>
+      <p>
+        La elaboración del Arrossejat, un plato que en realidad son dos, tiene su origen de manos de los pescadores del municipio. Éstos lo elaboraban en sus barcas para aprovechar el pescado que no se vendía. Una combinación de rape, congrio o mero y patatas con allioli (de primero) que da lugar a un arroz o unos fideos “rossejats” (de segundo), que combinan a la perfección con la salsa que ha quedado en la cazuela del pescado.
+      </p>
     </section>
-    <!--Sección con todas las opciones de menú-->
+    <!--Postres-->
     <section>
-        <h2>Menús</h2>
-        <p>Todos los menús tienen el pan y el postre incluidos</p>
-        <p>Precios con iba incluído</p>
-        <nav>
-            <ul type="None">
-                <li><a href="menu_1951.html">Menú 1951</a></li>
-                <li><a href="menu_la_barca.html">Menú La Barca</a></li>
-                <li><a href="menu_ca_lArdet.html">Menú Ca l'Ardet</a></li>
-            </ul>
-        </nav>
+      <h3>Postres</h3>
+      <ul type="None">
+        <li>Helado de chocolate con aceite y sal</li>
+        <li>Sorbete de naranja con cointreau</li>
+        <li>Crema catalana quemada con crema de frutos rojos</li>
+        <li>Trio de sorbetes (Yuzu, Manzana verde y fresa)</li>
+        <li>Tiramisú</li>
+        <li>Croquetas de crema catalana con canela y anís</li>
+        <li>Piña estofada con ron y sorbete de coco vegano</li>
+        <li>Brownie de chocolate con helado de vainilla y salsa de chocolate</li>
+        <li>Sorbete de granda con crema de mascarpone y crujiente de almendra</li>
+        <li>TRio de flanes con crema de baileys (Tradicional, cacao y menta)</li>
+        <li>Ciruelas en almíbar de garnacha roja con helado de cuajada</li>
+        <li>Surtido de quesos (para 2 personas)</li>
+      </ul>
     </section>
-
-    <!--Seccón con las opciones a la carta-->
-    <section>
-        <h2>Carta</h2>
-        <nav>
-            <ul type="None">
-                <li><a href="entrantes.html">Entrantes</a></li>
-                <li><a href="arroces_fideos.html">Arroces y fideos</a></li>
-                <li><a href="pescado_marisco.html">Pescado y marisco</a></li>
-                <li><a href="carnes.html">Carnes</a></li>
-                <li><a href="platos_infantiles.html">Platos infantiles</a></li>
-                <li><a href="postres.html">Postres</a></li>
-                <li><a href="vinos.html">Vinos</a></li>
-                <li><a href="para_llevar.html">Para llevar</a></li>
-            </ul>
-        </nav>
-    </section>
+    <p><strong>Postre y pan incluidos bebida no incluida</strong></p>
+    <p><strong>Mínimo 2 menús a razón de un menú por comensal</strong></p>
     <hr>
   </main>
 
