Seccion el restaurante

--- a/code/index.html
+++ b/code/index.html
@@ -60,13 +60,13 @@
   <main>
 
     <!--Seción Hero-->
-    <section>
+    <article>
       <div>
-        <h3>Donde el Mediterráneo se Sirve en Cada Plato</h3>
+        <h3>Donde el Mediterráneo se sirve en cada plato</h3>
         <p>Tradición desde 1951</p>
         
         <figure>
-          <img src="img/Inicio/bogavante.JPG" alt="Plato bogavante"  width="30%">
+          <img src="img/galeria/bogavante.JPG" alt="Plato bogavante"  width="30%">
         </figure>
 
         <!-- Botones de llamada a la acción -->
@@ -75,30 +75,10 @@
           <a href="reservas.html">Hacer Reserva</a>
         </div>
       </div>
-    </section>
-
-    <!--Sección sobre nosotros-->
-    <section>
-      <h2>Sobre nosotros</h2>
-      <div>
-        <p>
-          Bienvenidos a La Barca de Ca l’Ardet, un rincón privilegiado en Calafell, donde la tradición se encuentra con la creatividad.
-          Desde 1951, ofrecemos una experiencia culinaria única con una cocina marinera mediterránea que destaca por la frescura de sus ingredientes.
-          Con vistas al mar y un diseño interior que refleja nuestra herencia, cada detalle en nuestras tres salas ha sido cuidado al máximo para brindarte una experiencia inolvidable.
-          Bajo la dirección de Maite Pérez y Joan Nin, cada plato es una celebración del Mediterráneo.
-          Descubre más sobre nosotros y déjate seducir por el sabor del mar. ¡Te esperamos!
-        </p>
-
-        <figure>
-          <img src="img/Inicio/interior.jpg" alt="Interior del restaurante" width="50%">
-        </figure>
-      </div>
-
-      <a href="el_restaurante.html">Descubre más</a>
-    </section>
+    </article>
 
     <!--Sección platos estrella-->
-    <section>
+    <article>
       <h2>Cocina mediteránea</h2>
       <div>
         <p>
@@ -110,29 +90,13 @@
 
           <!--Carrusel de imagenes de platos-->
           <figure>
-            <img src="img/Inicio/langostas.jpg" alt="Langostas" width="50%">
+            <img src="img/galeria/langostas.jpg" alt="Langostas" width="50%">
           </figure>
         </p>
       </div>
 
       <a href="menu_carta.html">Ver carta completa</a>
-    </section>
-
-    <!--Sección reseñas destacadas-->
-    <section>
-      <h2>Reseñas destacadas</h2>
-      <p>
-        Estructura para mostrar reseñas
-      </p>
-    </section>
-
-    <!--Sección "Galería del entorno"-->
-    <section>
-      <h2>Galería del entorno</h2>
-      <p>
-        Galería con fotos del interior y del exterior del restaurante
-      </p>
-    </section>
+    </article>
     <hr>
   </main>
 
