Fichero html de la carta

--- a/code/avisos_legales.html
+++ b/code/avisos_legales.html
@@ -29,16 +29,17 @@
 
 <body>
   <header>
-    <!--Logo del restaurante-->
-    <figure>
-      <img src="img/logos/logo.jpg" alt="Logotip La Barca">
-    </figure>
-
-    <!--Nombre del restaurante-->
-    <section>
-      <h1>restaurante</h1>
-      <h2>La Barca de Ca l'Ardet</h2>
-    </section>
+    <div>
+      <!--Logo del restaurante-->
+      <figure>
+        <img src="img/logos/logo.jpg" alt="Logotip La Barca">
+      </figure>
+      <!--Nombre del restaurante-->
+      <section>
+        <h1>Restaurante</h1>
+        <h2>La Barca de Ca l'Ardet</h2>
+      </section>
+    </div>
 
     <!--Menú de navegación-->
     <nav>
