--- a/code/menu_1951.html
+++ b/code/menu_1951.html
@@ -29,16 +29,17 @@
 
 <body>
   <header>
-    <!--Logo del restaurante-->
-    <figure>
-      <img src="img/logos/logo.jpg" alt="Logotip La Barca">
-    </figure>
-
-    <!--Nombre del restaurante-->
-    <section>
-      <h1>restaurante</h1>
-      <h2>La Barca de Ca l'Ardet</h2>
-    </section>
+    <div>
+      <!--Logo del restaurante-->
+      <figure>
+        <img src="img/logos/logo.jpg" alt="Logotip La Barca">
+      </figure>
+      <!--Nombre del restaurante-->
+      <section>
+        <h1>Restaurante</h1>
+        <h2>La Barca de Ca l'Ardet</h2>
+      </section>
+    </div>
 
     <!--Menú de navegación-->
     <nav>
@@ -89,12 +90,12 @@
         <ul type="None">
             <li>Arroz meloso de galeras</li>
             <li>Arros de bacalao con verduras</li>
-            <li>arroz caldoso de marisco</li>
+            <li>Arroz caldoso de marisco</li>
             <li>Caldereta de fideos con marisco</li>
             <li>Fideos de gamba con allioli</li>
             <li>Arroz meloso de ceps y secreto ibérico</li>
             <li>Paella marinera</li>
-            <li>arroz negro con "sipionets" (+3,50€)</li>
+            <li>Arroz negro con "sipionets" (+3,50€)</li>
             <li>Arroz de pescadores con pescado de roca (+3,50€)</li>
             <br>
             <li>Bacalao confitado con mermelada de tomate</li>
