--- a/code/pescado_marisco.html
+++ b/code/pescado_marisco.html
@@ -59,39 +59,20 @@
     <figure>
       <img src="img/logos/logo_pastel.png" alt="La Barca" width="15%">
     </figure>
-    <!--Sección menú La Barca-->
     <section>
-      <h2>Menú La Barca - L'Arrossejat de Calafell</h2>
-      <h3>45,95€</h3>
-      <p>Arrossejat pescador:</p>
-      <ul type="None">
-        <li>La cazuela de rape con patatas y allioli</li>
-        <li>Y el arroz o los fideos "rossejats" a banda</li>
-      </ul>
-      <p>
-        La elaboración del Arrossejat, un plato que en realidad son dos, tiene su origen de manos de los pescadores del municipio. Éstos lo elaboraban en sus barcas para aprovechar el pescado que no se vendía. Una combinación de rape, congrio o mero y patatas con allioli (de primero) que da lugar a un arroz o unos fideos “rossejats” (de segundo), que combinan a la perfección con la salsa que ha quedado en la cazuela del pescado.
-      </p>
+        <h2>Pescado y marisco</h2>
+        <ul type="None">
+            <li>Bacalao confitado con mermelasda de tomate 19 €</li>
+            <li>Suquet del arrossejat de Calafell con rape 35 €</li>
+            <li>Suquet de lubina con cangrejo azul al all cremat 35 €</li>
+            <li>Bogavante a la plancha o al orio 38 €</li>
+            <li>Pescado a la plancha o al orio (Consultar disponibilidad) s/m</li>
+            <li>Gambas a la plancha 18/20 piezas/kg 9,50 €/ud</li>
+            <li>Cigalas sa la plancha 6/7 piezas/kg 8 €/ud</li>
+            <li>Bogavante del Mediterráneo 85 €/kg</li>
+            <li>Langosta del Mediterráneo 150 €/kg</li>
+        </ul>
     </section>
-    <!--Postres-->
-    <section>
-      <h3>Postres</h3>
-      <ul type="None">
-        <li>Helado de chocolate con aceite y sal</li>
-        <li>Sorbete de naranja con cointreau</li>
-        <li>Crema catalana quemada con crema de frutos rojos</li>
-        <li>Trio de sorbetes (Yuzu, Manzana verde y fresa)</li>
-        <li>Tiramisú</li>
-        <li>Croquetas de crema catalana con canela y anís</li>
-        <li>Piña estofada con ron y sorbete de coco vegano</li>
-        <li>Brownie de chocolate con helado de vainilla y salsa de chocolate</li>
-        <li>Sorbete de granda con crema de mascarpone y crujiente de almendra</li>
-        <li>TRio de flanes con crema de baileys (Tradicional, cacao y menta)</li>
-        <li>Ciruelas en almíbar de garnacha roja con helado de cuajada</li>
-        <li>Surtido de quesos (para 2 personas)</li>
-      </ul>
-    </section>
-    <p><strong>Postre y pan incluidos bebida no incluida</strong></p>
-    <p><strong>Mínimo 2 menús a razón de un menú por comensal</strong></p>
     <hr>
   </main>
 
