--- a/code/contacto.html
+++ b/code/contacto.html
@@ -49,7 +49,7 @@
         <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
-        <li><a href="contacto.html">CONTACTO</a></li>
+        <li>CONTACTO</li>
       </ul>
     </nav>
     <h1>Contacto</h1>
