Some more implementations

--- a/code/el_restaurante.html
+++ b/code/el_restaurante.html
@@ -36,7 +36,7 @@
       </figure>
       <!--Nombre del restaurante-->
       <section>
-        <h1>Restaurante</h1>
+        <h2>Restaurante</h2>
         <h2>La Barca de Ca l'Ardet</h2>
       </section>
     </div>
@@ -53,15 +53,14 @@
       </ul>
     </nav>
 
-    <!--Botón de Reserva Rápida-->
-    <a href="reservas.html">Reserva Rápida</a>
+    <h1>El restaurante</h1>
     <hr>
   </header>
 
   <main>
     <!--Sección sobre nosotros-->
     <article>
-        <h2>Sobre nosotros</h2>
+        <h3>Sobre nosotros</h3>
         <p>
             Bienvenidos a La Barca de Ca l’Ardet, un rincón privilegiado en Calafell, donde la tradición se encuentra con la creatividad.
             Desde 1951, ofrecemos una experiencia culinaria única con una cocina marinera mediterránea que destaca por la frescura de sus ingredientes.
@@ -76,7 +75,7 @@
 
     <!--Sección ambiente del restaurante-->
     <article>
-        <h2>Ambiente inigualable</h2>
+        <h3>Ambiente inigualable</h3>
         <p>
           En La Barca de Ca l'Ardet, el ambiente está diseñado para transportar a nuestros comensales a la esencia misma del Mediterráneo.
           Con una decoración que combina la calidez de la madera y los tonos azules del mar, el restaurante ofrece un espacio acogedor e íntimo
@@ -99,7 +98,7 @@
 
     <!--Sección ingredientes-->
     <article>
-      <h2>Ingredientes de primera</h2>
+      <h3>Ingredientes de primera</h3>
       <p>
         En La Barca de Ca l'Ardet, la calidad de los ingredientes es el corazón de nuestra cocina. Utilizamos solo productos frescos y de origen local,
         seleccionados cada día para asegurar la máxima frescura y sabor en cada plato. Desde el pescado recién capturado hasta los vegetales de temporada
@@ -122,7 +121,7 @@
 
     <!--Sección reseñas destacadas-->
     <article>
-        <h2>Reseñas destacadas</h2>
+        <h3>Reseñas destacadas</h3>
         <p>
         Estructura para mostrar reseñas
         </p>
@@ -130,7 +129,7 @@
 
     <!--Sección "Galería del entorno"-->
     <section>
-        <h2>Galería de Fotos (provisional)</h2>
+        <h3>Galería de Fotos (provisional)</h3>
         
         <div>
           <figure>
