--- a/code/nuestra_cocina.html
+++ b/code/nuestra_cocina.html
@@ -36,7 +36,7 @@
       </figure>
       <!--Nombre del restaurante-->
       <section>
-        <h1>Restaurante</h1>
+        <h2>Restaurante</h2>
         <h2>La Barca de Ca l'Ardet</h2>
       </section>
     </div>
@@ -53,13 +53,57 @@
       </ul>
     </nav>
 
-    <!--Botón de Reserva Rápida-->
-    <a href="reservas.html">Reserva Rápida</a>
+    <h1>Nuestra cocina</h1>
     <hr>
   </header>
 
   <main>
+    <article>
+      <h3>Cocina marinera mediterránea</h3>
+      <p>
+        Nos inspira el mar. Fuente inagotable para nuestras creaciones. Su aroma, su color, su vida…
+        <br><br>
+        Rescatamos los sabores de la cocina tradicional marinera, que salpicamos de matices creativos y adornamos con influencias mediterráneas de vanguardia.
+        Así, dotamos nuestros platos de una personalidad gastronómica única. Repletos de sensaciones y placeres puros, que destacan por su naturalidad y
+        frescura bajo la atenta mirada de Joan Nin, responsable de cocina.
+      </p>
+      <figure>
+        <img src="img/galeria/ostras.jpg" alt="Gambas" width="30%">
+      </figure>
+    </article>
 
+    <!--Botón de Reserva Rápida-->
+    <a href="reservas.html">Reserva Rápida</a>
+
+    <section>
+      <article>
+        <a href="pescado_marisco.html"><h3>Pescado y marisco</h3></a>
+        <p>
+          Son los protagonistas indiscutibles de nuestra carta. Del mar a la cocina. Su naturaleza fresca y frágil exige una manipulación delicada y cuidada que nos descubre un universo infinito de sabores y texturas.
+        </p>
+        <figure>
+          <img src="img/galeria/pescado.jpg" alt="Dorada" width="30%">
+        </figure>
+      </article>
+      <article>
+        <a href="carnes.html"><h3>Carnes</h3></a>
+        <p>
+          Atención especial merece la minuciosa selección de carnes que ofrecemos a nuestra carta. Tiernos y suaves, destacan por su plenitud de sabor y textura sabrosa.
+        </p>
+        <figure>
+          <img src="img/galeria/solomillo.jpeg" alt="Solomillo" width="30%">
+        </figure>
+      </article>
+      <article>
+        <a href="postres.html"><h3>Postres</h3></a>
+        <p>
+          Muy atentos a las tendencias del universo dulce, pero sin dejarnos traer por ellas, cuidamos con miramiento lo ultima mordisco de nuestra carta.
+        </p>
+        <figure>
+          <img src="img/galeria/postre.jpg" alt="Postre" width="30%">
+        </figure>
+      </article>
+    </section>
     <hr>
   </main>
 
