--- a/code/reservas.html
+++ b/code/reservas.html
@@ -36,7 +36,7 @@
       </figure>
       <!--Nombre del restaurante-->
       <section>
-        <h1>Restaurante</h1>
+        <h2>Restaurante</h2>
         <h2>La Barca de Ca l'Ardet</h2>
       </section>
     </div>
@@ -52,12 +52,86 @@
         <li><a href="contacto.html">CONTACTO</a></li>
       </ul>
     </nav>
-    <h1>Contacto</h1>
+    <h1>Reservas</h1>
     <hr>
   </header>
 
   <main>
+    <section>
+      <h3>Reservar directamente</h3>
+      <p>(o contacta con nosotros para cualquier otra duda)</p>
 
+      <h4>Reserva Whatsapp</h4>
+      <p>877 055 187</p>
+
+      <a href="https://www.google.es/maps/place/Restaurant+La+Barca+de+Ca+l'Ardet/@41.1925926,1.5866933,1321m/data=!3m2!1e3!4b1!4m6!3m5!1s0x12a38bf9da7b16e9:0xc89b64e797e7534!8m2!3d41.1925926!4d1.5892682!16s%2Fg%2F1tff05hh?hl=ca&entry=ttu&g_ep=EgoyMDI0MTEwNi4wIKXMDSoASAFQAw%3D%3D"><h4>Visítenos</h4></a>
+      <p>C. Marinada 2 - Urb. Mas Mel - 43820 Calafell (Tarragona)</p>
+
+      <h4>Llámenos</h4>
+      <p>977 691 559</p>
+
+      <h4>Escríbanos</h4>
+      <a href="mailto:info@labarcadecalardet.com">info@labarcadecalardet.com</a></p>
+    </section>
+
+    <section>
+      <h3>Consulta disponibilidad</h3>
+      <p>(con 48 horas de antelación)</p>
+      <p>
+        Hacer una consulta es muy sencillo. Cumplimente el siguiente formulario, y una vez que comprobemos la disponibilidad le haremos llegar una confirmación. En caso de no tener mesas disponibles, le contactaríamos para ofrecerle una alternativa de fechas u horas.
+      </p>
+
+      <form action="post">
+        <p>
+          <label for="name"></label>
+          <input type="text" name="name" id="name" placeholder="Nombre">
+        </p>
+        <p>
+          <label for="phone"></label>
+          <input type="number" name="phone" id="phone" placeholder="Teléfono">
+        </p>
+        <p>
+            <label for="email"></label>
+            <input type="email" name="email" id="email" placeholder="Correo electrónico">
+        </p>
+        <p>
+          <label for="day"></label>
+          <input type="date" name="day" id="day">
+        </p>
+        <p>
+          <select name="hora" id="hora">
+            <option value="13:30 pm">13:30 pm</option>
+            <option value="13:45 pm">13:45 pm</option>
+            <option value="13:45 pm">13:45 pm</option>
+            <option value="14:00 pm">14:00 pm</option>
+            <option value="14:15 pm">14:15 pm</option>
+            <option value="14:30 pm">14:30 pm</option>
+            <option value="14:45 pm">14:45 pm</option>
+            <option value="15:00 pm">15:00 pm</option>
+            <option value="15:15 pm">15:15 pm</option>
+            <option value="15:30 pm">15:30 pm</option>
+            <option value="15:45 pm">15:45 pm</option>
+          </select>
+        </p>
+        <p>
+          <select name="personas" id="personas">
+            <option value="1 Persona">1 Persona</option>
+            <option value="2 Personas">2 Personas</option>
+            <option value="3 Personas">3 Personas</option>
+            <option value="4 Personas">4 Personas</option>
+            <option value="5 Personas">5 Personas</option>
+            <option value="6 Personas">6 Personas</option>
+            <option value="7 Personas">7 Personas</option>
+            <option value="8 Personas">8 Personas</option>
+            <option value="9 Personas">9 Personas</option>
+            <option value="10 Personas">10 Personas</option>
+          </select>
+        </p>
+
+        <input type="submit" value="Solicitar reserva">
+        <input type="reset" value="Restablecer">
+      </form>
+    </section>
     <hr>
   </main>
 
