--- a/code/contacto.html
+++ b/code/contacto.html
@@ -63,19 +63,19 @@
             <p>Envíe el siguiente formulario y nos pondremos en contacto con usted lo antes posible</p>
             <p>
                 <label for="name"></label>
-                <input type="text" name="name" id="name" placeholder="Nombre">
+                <input type="text" name="name" id="name" placeholder="Nombre" required>
             </p>
             <p>
                 <label for="email"></label>
-                <input type="email" name="email" id="email" placeholder="Correo electrónico">
+                <input type="email" name="email" id="email" placeholder="Correo electrónico" required>
             </p>
             <p>
                 <label for="affair"></label>
-                <input type="text" name="affair" id="affair" placeholder="Asunto">
+                <input type="text" name="affair" id="affair" placeholder="Asunto" required>
             </p>
             <p>
                 <label for="message"></label>
-                <textarea name="message" id="message"cols="60" rows="10" placeholder="Mensaje"></textarea>
+                <textarea name="message" id="message"cols="60" rows="10" placeholder="Mensaje" required></textarea>
             </p>
             <p>
                 <input type="checkbox" name="avisos" id="avisos">
