--- a/code/el_restaurante.html
+++ b/code/el_restaurante.html
@@ -25,6 +25,9 @@
 
   <!--Para algunos navegadores móviles-->
   <meta name="theme-color" content="#fafafa">
+
+  <!--Para vincular hoja de estilos-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -105,18 +108,20 @@
         y las especias aromáticas, cada ingrediente es tratado con el respeto y la dedicación que merece, preservando sus características naturales y
         potenciando su sabor en recetas tradicionales con un toque moderno.
       </p>
-      <figure>
-        <img src="img/galeria/gambas_frescas.jpg" alt="Gambas" width="30%">
-        <figcaption>Gambas de Vilanova</figcaption>
-      </figure>
-      <figure>
-        <img src="img/galeria/lenguados.jpg" alt="Lenguados" width="30%">
-        <figcaption>Lenguados</figcaption>
-      </figure>
-      <figure>
-        <img src="img/galeria/pescado.jpg" alt="Dorada" width="30%">
-        <figcaption>Dorada</figcaption>
-      </figure>
+      <div class="fotos_comida">
+        <figure>
+          <img src="img/galeria/gambas_frescas.jpg" alt="Gambas" width="30%">
+          <figcaption>Gambas de Vilanova</figcaption>
+        </figure>
+        <figure>
+          <img src="img/galeria/lenguados.jpg" alt="Lenguados" width="30%">
+          <figcaption>Lenguados</figcaption>
+        </figure>
+        <figure>
+          <img src="img/galeria/pescado.jpg" alt="Dorada" width="30%">
+          <figcaption>Dorada</figcaption>
+        </figure>
+      </div>
     </article>
 
     <!--Sección reseñas destacadas-->
