--- a/code/index.html
+++ b/code/index.html
@@ -27,7 +27,7 @@
   <meta name="theme-color" content="#fafafa">
 
   <!--Para vincular hoja de estilos-->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
       </figure>
       <!--Nombre del restaurante-->
       <section>
-        <h1>Restaurante</h1>
+        <h2>Restaurante</h1>
         <h2>La Barca de Ca l'Ardet</h2>
       </section>
     </div>
@@ -58,6 +58,7 @@
 
     <!--Botón de Reserva Rápida-->
     <a href="reservas.html">Reserva Rápida</a>
+    <h1>inicio</h1>
     <hr>
   </header>
 
