--- a/code/menu_carta.html
+++ b/code/menu_carta.html
@@ -25,6 +25,9 @@
 
   <!--Para algunos navegadores móviles-->
   <meta name="theme-color" content="#fafafa">
+
+  <!--Para vincular hoja de estilos-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -82,7 +85,7 @@
     <section>
         <h3>Carta</h3>
         <nav>
-            <ul type="None">
+            <ul>
                 <li><a href="entrantes.html">Entrantes</a></li>
                 <li><a href="arroces_fideos.html">Arroces y fideos</a></li>
                 <li><a href="pescado_marisco.html">Pescado y marisco</a></li>
