--- a/code/menu_ca_lArdet.html
+++ b/code/menu_ca_lArdet.html
@@ -25,6 +25,9 @@
 
   <!--Para algunos navegadores móviles-->
   <meta name="theme-color" content="#fafafa">
+
+  <!--Para vincular hoja de estilos-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
