--- a/code/index.html
+++ b/code/index.html
@@ -47,9 +47,10 @@
     <!--Menú de navegación-->
     <nav>
       <ul>
-        <li>INICIO</li>
+        <li><p class="current">INICIO</p></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
         <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="para_llevar.html">PARA LLEVAR</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
@@ -57,7 +58,13 @@
     </nav>
 
     <!--Botón de Reserva Rápida-->
-    <a href="reservas.html">Reserva Rápida</a>
+    <p>
+      <a href="reservas.html" class="reserva-link">
+        <i class="icon-clipboard-check"></i>
+        <span>Reserva rápida</span>
+      </a>
+    </p>
+    
     <h1>inicio</h1>
     <hr>
   </header>
