--- a/code/menu_carta.html
+++ b/code/menu_carta.html
@@ -49,7 +49,8 @@
       <ul>
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
-        <li>MENÚ/CARTA</li>
+        <li><p class="current">MENÚ/CARTA</p></li>
+        <li><a href="para_llevar.html">PARA LLEVAR</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
@@ -72,7 +73,7 @@
         <h3>Menús</h3>
         <p>Todos los menús tienen el pan y el postre incluidos</p>
         <p>Precios con iba incluído</p>
-        <nav>
+        <nav class="menus">
             <ul type="None">
                 <li><a href="menu_1951.html">Menú 1951</a></li>
                 <li><a href="menu_la_barca.html">Menú La Barca</a></li>
@@ -84,7 +85,7 @@
     <!--Seccón con las opciones a la carta-->
     <section>
         <h3>Carta</h3>
-        <nav>
+        <nav class="carta">
             <ul>
                 <li><a href="entrantes.html">Entrantes</a></li>
                 <li><a href="arroces_fideos.html">Arroces y fideos</a></li>
