--- a/code/nuestra_cocina.html
+++ b/code/nuestra_cocina.html
@@ -50,7 +50,8 @@
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
         <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
-        <li>NUESTRA COCINA</li>
+        <li><a href="para_llevar.html">PARA LLEVAR</a></li>
+        <li><p class="current">NUESTRA COCINA</p></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
       </ul>
