--- a/code/reservas.html
+++ b/code/reservas.html
@@ -50,8 +50,9 @@
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
         <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="para_llevar.html">PARA LLEVAR</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
-        <li>RESERVAS</li>
+        <li><p class="current">RESERVAS</p></li>
         <li><a href="contacto.html">CONTACTO</a></li>
       </ul>
     </nav>
