--- a/code/contacto.html
+++ b/code/contacto.html
@@ -50,9 +50,10 @@
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
         <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="para_llevar.html">PARA LLEVAR</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
-        <li>CONTACTO</li>
+        <li><p class="current">CONTACTO</p></li>
       </ul>
     </nav>
     <h1>Contacto</h1>
