--- a/code/el_restaurante.html
+++ b/code/el_restaurante.html
@@ -48,8 +48,9 @@
     <nav>
       <ul>
         <li><a href="index.html">INICIO</a></li>
-        <li>EL RESTAURANTE</li>
+        <li><p class="current">EL RESTAURANTE</p></li>
         <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="para_llevar.html">PARA LLEVAR</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
