--- a/code/menu_1951.html
+++ b/code/menu_1951.html
@@ -49,7 +49,7 @@
       <ul>
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
-        <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="menu_carta.html" class="current">MENÚ/CARTA</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
@@ -63,7 +63,7 @@
       <img src="img/logos/logo_pastel.png" alt="La Barca" width="15%">
     </figure>
     <h2>Menú 1951</h2>
-    <h3>39,95€</h3>
+    <h3 class="precio">39,95€</h3>
     <!--Primeros platos-->
     <section>
         <h3>Primeros platos</h3>
