--- a/code/menu_ca_lArdet.html
+++ b/code/menu_ca_lArdet.html
@@ -49,7 +49,7 @@
       <ul>
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
-        <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="menu_carta.html" class="current">MENÚ/CARTA</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
@@ -65,7 +65,7 @@
     <!--Sección menú Ca l'Ardet-->
     <section>
         <h2>Menú ca l'Ardet - La mariscada</h2>
-        <h3>94,95€</h3>
+        <h3 class="precio">94,95€</h3>
         <ul type="None">
             <li>Ostras al natural</li>
             <li>Cañaillas con romesco</li>
