--- a/code/menu_la_barca.html
+++ b/code/menu_la_barca.html
@@ -49,7 +49,7 @@
       <ul>
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
-        <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="menu_carta.html" class="current">MENÚ/CARTA</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
@@ -65,7 +65,7 @@
     <!--Sección menú La Barca-->
     <section>
       <h2>Menú La Barca - L'Arrossejat de Calafell</h2>
-      <h3>45,95€</h3>
+      <h3 class="precio">45,95€</h3>
       <p>Arrossejat pescador:</p>
       <ul type="None">
         <li>La cazuela de rape con patatas y allioli</li>
