--- a/code/para_llevar.html
+++ b/code/para_llevar.html
@@ -50,11 +50,14 @@
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
         <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><p class="current">PARA LLEVAR</p></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
       </ul>
     </nav>
+
+    <h1>Para llevar</h1>
     <hr>
   </header>
 
