--- a/code/pescado_marisco.html
+++ b/code/pescado_marisco.html
@@ -49,7 +49,7 @@
       <ul>
         <li><a href="index.html">INICIO</a></li>
         <li><a href="el_restaurante.html">EL RESTAURANTE</a></li>
-        <li><a href="menu_carta.html">MENÚ/CARTA</a></li>
+        <li><a href="menu_carta.html" class="current">MENÚ/CARTA</a></li>
         <li><a href="nuestra_cocina.html">NUESTRA COCINA</a></li>
         <li><a href="reservas.html">RESERVAS</a></li>
         <li><a href="contacto.html">CONTACTO</a></li>
